k8s/apps/media/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: echo-server
