k8s/apps/media/echo-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-server-route
  namespace: echo-server
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - "echo-server.vanillax.xyz"
  rules:
  - backendRefs:
    - name: echo-server
      port: 80
